DSS-166 fixed with new patch of openxml4j
git-svn-id: https://svn.cesecore.eu/svn/signserver-restricted/trunk@684 91c8134f-2a44-0410-ba45-dce2f532dbc6