@@ -41,8 +41,8 @@ set i=%8
 set j=%9
 rem echo %a% %b% %c% %d% %e% %f% %g% %h% %i% %j%
 if "%JAVA_HOME%" == "" (
-  java -Djava.endorsed.dirs=%SIGNSRV_HOME%\lib\endorsed -cp %CLASSPATH%  org.signserver.cli.signserver %a% %b% %c% %d% %e% %f% %g% %h% %i% %j%
+  java -cp %CLASSPATH%  org.signserver.cli.signserver %a% %b% %c% %d% %e% %f% %g% %h% %i% %j%
 ) else (
-  "%JAVA_HOME%\bin\java" -Djava.endorsed.dirs=%SIGNSRV_HOME%\lib\endorsed -cp %CLASSPATH% org.signserver.cli.signserver %a% %b% %c% %d% %e% %f% %g% %h% %i% %j% 
+  "%JAVA_HOME%\bin\java" -cp %CLASSPATH% org.signserver.cli.signserver %a% %b% %c% %d% %e% %f% %g% %h% %i% %j% 
 )
 :end
